--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "GLCIP"
+name = "InfluenceOptimization"
 uuid = "f2f6af92-9624-11ea-2a0a-9937fb3be0fc"
 authors = ["Vinicius Ferreira de Souza"]
 version = "0.1.0"
